# rust_server_salvo

./: Cargo.toml
config/: config.toml
src/: main.rs
src/routers/: user.rs
src/services/: user.rs
