[package]
name = "project_name"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
argon2 = { version = "0.5.2", features = [] }
clia-tracing-config = "0.2.5"
jsonwebtoken = "8.3.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.63", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static"] }
sea-orm = { version = "0", features = ["runtime-tokio-native-tls", "sqlx-sqlite"] }
serde = "1.0.188"
thiserror = "1.0.48"
time = "0.3.28"
tokio = { version = "1", features = ["full"] }
toml = "0.8.0"
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16", features = ["derive"] }
